[metadata]
name = scoobi
version = 0.0.1.5
author = Avinash Kumar
author_email = avialxee@gmail.com
description = Solar Conventionality-based Organizing Observation data ( SCOOBI )
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/scoobi
project_urls =
    Bug Tracker = https://github.com/avialxee/scoobi/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src